--- a/html-css/exercicios/Projeto-02/style.css
+++ b/html-css/exercicios/Projeto-02/style.css
@@ -1,11 +1,21 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&family=Sriracha&display=swap');
+
+:root {
+    --fonte01: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte02: "Passion One", sans-serif;
+    --fonte03: "Sriracha", cursive;
+}
+
+
 * {
     margin: 0px;
     padding: 0px;
 }
 
 html, body {
+    font-family: var(--fonte01);
     min-height: 100vh;
     background-color: darkgray;
 }
@@ -19,6 +29,8 @@ header {
 header > h1 {
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--fonte02);
+    font-size: 10vw;
 }
 
 header > p {
@@ -36,10 +48,12 @@ header a:hover, footer a:hover {
  }
 
  section {
+    font-family: var(--fonte03);
     padding-left: 30px;
     padding-top: 10vh;
     padding-bottom: 10vh;
     line-height: 2em;
+    font-size: 3vw;
  }
 
  section.normal {
@@ -56,7 +70,8 @@ header a:hover, footer a:hover {
 
  section.imagem > p {
     background-color: rgb(57, 57, 57);
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
     
  }
 
