--- a/html-css/exercicios/ex026/imagens/mq001/estilos/impressora.css
+++ b/html-css/exercicios/ex026/imagens/mq001/estilos/impressora.css
@@ -3,12 +3,29 @@
 /*Estilo para impressora*/
 
 * {
-    margin: 10px;
-    padding: 10px;
+    margin: 20px;
+    padding: 20px;
 }
 
 html {
     font-family: 'Courier New', Courier, monospace;
     font-size: 1.5em;
-    line-height: 1,5em;
+    line-height: 1.5em;
+    color: blueviolet;
+}
+
+menu {
+    display: none;
+}
+
+article::after {
+    content: 'Esse artigo foi impresso através do site www.cursoemvideo.com.br';
+}
+
+article {
+    width: 100%;
+}
+
+header > h1 {
+    display: none;
 }
