--- a/html-css/exercicios/ex026/imagens/mq001/estilos/tela.css
+++ b/html-css/exercicios/ex026/imagens/mq001/estilos/tela.css
@@ -10,5 +10,30 @@
 html {
     font-size: 1em;
     font-family: Arial, Helvetica, sans-serif;
-    color: rgb(41, 111, 172);
+    color: rgb(0, 0, 0);
+}
+
+header {
+    background-color: rgb(255, 0, 0);
+}
+
+header > h1 {
+    text-align: center;
+}
+
+menu ul {
+    list-style-type: none;
+    background-color: gray;
+}
+
+menu li {
+    display: inline-block;
+    padding: 10px;
+    background-color: darkblue;
+}
+
+article {
+    width: 600px;
+    margin: auto;
+    display: block;
 }
