--- a/html-css/exercicios/ex026/mq002/estilos/paisagem.css
+++ b/html-css/exercicios/ex026/mq002/estilos/paisagem.css
@@ -1,3 +1,9 @@
 @charset "UTF-8";
 
 /* Aparelho deitado (Landscape)*/
+
+body {
+    background-image: url(../imagens/cev-landscape.jpg);
+   /*background-color: red;*/
+   background-position: left bottom;
+}
