--- a/html-css/exercicios/ex026/mq005/estilos/style.css
+++ b/html-css/exercicios/ex026/mq005/estilos/style.css
@@ -1,3 +1,74 @@
 @charset "UTF-8";
 
-body, html { background-color: lightgrey ;}
+* {
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0px;
+    padding: 0px; 
+}
+
+body, html { 
+    background-color: lightgrey;
+}
+
+header {
+    background-color: gray;
+}
+
+header > h1 {
+    padding: 10px;
+    text-align: center;
+}
+
+menu {
+    display: none;
+}
+
+menu > ul { list-style-type: none; } /* Tira as bolinhas da lista */ 
+
+menu > ul > li > a { 
+    display: block;
+    padding: 10px;
+    text-decoration: none;
+    background-color: rgb(87, 87, 87);
+    color: white;
+    text-align: center;
+    border-top: 2px solid rgb(148, 148, 148);
+}
+
+span#burguer {
+    background-color: rgb(48, 48, 48);
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 10px;
+    cursor: pointer;
+}
+
+span#burguer:hover {
+    background-color: white;
+    color: black;
+}
+
+menu > ul > li a:hover {
+    background-color: gray;
+}
+
+main {
+    width: 90vw;
+    background-color: white;
+    margin: auto;
+    padding: 10px;
+    border-radius: 10px;
+    margin-top: 10px;
+}
+
+main > h2 {
+    padding-bottom: 10px;
+}
+
+article > p {
+    text-align: justify;
+    margin-bottom: 20px;
+    text-indent: 20px;
+
+}
