--- a/html-css/exercicios/projeto-04/estilos/style.css
+++ b/html-css/exercicios/projeto-04/estilos/style.css
@@ -17,4 +17,51 @@ Azul Escuro: #024959
 Azul Claro: #65858C
 Marron Escuro: #26231F
 Marron Claro: #734E39
+
 */
+
+* {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box; /* Borda faça parte da conta da largura */
+}
+
+body, html {
+    background-color: #024959;
+    height: 100vh;
+    width: 100vw;
+}
+
+main {
+    position: relative;
+    height: 100vh;
+    width: 100vw;   
+}
+
+section#login {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    background-color: #F2F2F2;
+    width: 250px;
+    height: 500px;
+    border-radius: 20px;
+    overflow: hidden; /* Arredonda a div e a foto */
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.915);
+}
+
+section#login > div#imagem {
+    display: block;
+    background: #024959 url(../imagens/portrait.jpg) no-repeat;
+    background-size: 100%;
+    background-position: center ;
+    height: 200px;
+}
+
+section#login > div#formulario {
+    padding: 10px;
+    display: block;
+}
