--- a/html-css/exercicios/projeto-04/estilos/media-query.css
+++ b/html-css/exercicios/projeto-04/estilos/media-query.css
@@ -14,15 +14,18 @@
     section#login > div#imagem {
         float: left;
         width: 41%;
-        height: 105vh;
+        height: 105%;
         background-size: cover;
-        background-position: -25px -100px;
+        background-position: center;
+        
     }
 
     section#login > div#formulario {
         float: right;
         width: 59%;
     }
+
+    div#formulario > p { font-size: 1.1em; }
 }
 
 
@@ -46,4 +49,6 @@
     section#login > div#formulario {
         
     }
+
+    div#formulario > p { font-size: 1.2em; }
 }
