--- a/html-css/exercicios/projeto-04/estilos/style.css
+++ b/html-css/exercicios/projeto-04/estilos/style.css
@@ -74,4 +74,51 @@ div#formulario {
     margin-bottom: 10px;
 }
 
-div#formulario > p { font-size: 0.8em; }
+div#formulario > h1 {
+    margin-bottom: 10px;
+}
+
+div#formulario > p { 
+    font-size: 0.8em;
+    margin-bottom: 10px;
+}
+
+form > div.campo { /**/ }
+
+div.campo > label { display: none; }
+
+form > input[type=submit] {
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: #026873;
+    color: #F2F2F2;
+    border: none;
+    border-radius: 5px;
+    margin-top: 20px;
+}
+
+form > input[type=submit]:hover {
+    background-color: #004f58;
+}
+
+form > a.botao {
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: #026873;
+    border: 2px solid #21757e;
+    border-radius: 5px;
+    color: #CAA090;
+    margin-top: 5px;
+}
+form > a.botao:hover {
+    background-color: #004f58 ;
+}
+
+form > a.botao > span {
+    font-size: 1.4em;
+}
