--- a/html-css/exercicios/projeto-04/estilos/media-query.css
+++ b/html-css/exercicios/projeto-04/estilos/media-query.css
@@ -25,7 +25,10 @@
         width: 59%;
     }
 
-    div#formulario > p { font-size: 1.1em; }
+    div#formulario > p { 
+        font-size: 1.1em;
+        margin-bottom: 20px; 
+    }
 }
 
 
@@ -34,16 +37,16 @@
 @media screen and (min-width: 992px) {
 
     body {
-        background-image: linear-gradient(to top, #CAA090, #024959) ;
+        background-image: linear-gradient(to top, #CAA090, #024959);
     }
 
     section#login {
         width: 992px;
-        height: 590px;
+        height: 635px;
     }
 
     section#login > div#imagem {
-        height: 55%;
+        height: 330px;
         background-position: 0px -680px;
     }
 
@@ -51,5 +54,8 @@
         
     }
 
-    div#formulario > p { font-size: 1.2em; }
+    div#formulario > p { 
+        font-size: 1.2em;
+        margin-bottom: 30px;
+    }
 }
