--- a/html-css/exercicios/projeto-04/estilos/style.css
+++ b/html-css/exercicios/projeto-04/estilos/style.css
@@ -47,7 +47,7 @@ section#login {
 
     background-color: #F2F2F2;
     width: 250px;
-    height: 500px;
+    height: 515px;
     border-radius: 20px;
     overflow: hidden; /* Arredonda a div e a foto */
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.915);
@@ -83,9 +83,35 @@ div#formulario > p {
     margin-bottom: 10px;
 }
 
-form > div.campo { /**/ }
+div.campo > span {
+    font-size: 2em;
+    width: 40px;
+    padding: 4px;
+}
 
-div.campo > label { display: none; }
+form > div.campo {
+    background-color: #CAA090;
+    border: 2px solid #a88172;
+    width: 100%;
+    display: block;
+    height: 40px;
+    border-radius: 5px;
+    margin: 5px 0px; /* Top and bottom = 5px // right and left = 0px */
+}
+
+div.campo > input {
+    background-color: #0000007c;
+    font-size: 0.9em;
+    height: 100%;
+    border-radius: 7px;
+    padding: 8px;
+    width: calc(100% - 45px);
+    transform: translateY(-12px);
+}
+
+div.campo > label { 
+    display: none;
+}
 
 form > input[type=submit] {
     display: block;
@@ -96,7 +122,7 @@ form > input[type=submit] {
     color: #F2F2F2;
     border: none;
     border-radius: 5px;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 form > input[type=submit]:hover {
@@ -120,5 +146,9 @@ form > a.botao:hover {
 }
 
 form > a.botao > span {
-    font-size: 1.4em;
+    font-size: x-large;
+}
+
+div.campo > input:focus-within {
+    background-color: rgb(90, 90, 90);
 }
