--- a/html-css/exercicios/modern-login/style.css
+++ b/html-css/exercicios/modern-login/style.css
@@ -117,3 +117,20 @@ body {
 .register-link p a:hover {
     text-decoration: underline;
 }
+
+@media screen and (orientation: portrait) {
+
+    .wrapper h1 {
+        font-size: 35px;
+        text-align: center;
+    }
+    
+    .wrapper { width: 290px; }
+    
+    .remember-forgot a { font-size: 13px; }
+
+    .remember-forgot label { font-size: 13px; }
+
+    .wrapper .remember-forgot { margin: -3px -20px 25px; }
+    
+}
