--- a/html-css/exercicios/modern-login/style.css
+++ b/html-css/exercicios/modern-login/style.css
@@ -20,7 +20,8 @@ body {
 }
 
 .wrapper {
-    width: 420px;
+    height: 600px;
+    width: 620px;
     background: transparent;
     border: 2px solid rgba(255, 255, 255, .2);
     backdrop-filter: blur(20px);
@@ -31,6 +32,7 @@ body {
 }
 
 .wrapper h1 {
+    margin-top: 60px;
     font-size: 36px;
     text-align: center;
 }
