--- a/html-css/exercicios/modern-login/style.css
+++ b/html-css/exercicios/modern-login/style.css
@@ -32,8 +32,9 @@ body {
 }
 
 .wrapper h1 {
-    margin-top: 60px;
-    font-size: 36px;
+    margin-top: 50px;
+    padding-bottom: 30px;
+    font-size: 46px;
     text-align: center;
 }
 
