--- a/html-css/exercicios/modern-login/style.css
+++ b/html-css/exercicios/modern-login/style.css
@@ -121,21 +121,38 @@ body {
     text-decoration: underline;
 }
 
-/* 
 @media screen and (orientation: portrait) {
 
     .wrapper h1 {
-        font-size: 35px;
+        font-size: 60px;
         text-align: center;
     }
     
-    .wrapper { width: 290px; }
-    
-    .remember-forgot a { font-size: 13px; }
+    .wrapper { 
+        width: 450px;
+        height: 90vh;
+    }
 
-    .remember-forgot label { font-size: 13px; }
+    .wrapper .remember-forgot { margin: 100px -20px 12vh; }
 
-    .wrapper .remember-forgot { margin: -3px -20px 25px; }
+    .remember-forgot a { font-size: 22px; }
+
+    .remember-forgot label { font-size: 22px; }
+
+    .wrapper .input-box {
+        width: 100%;
+        height: 85px;
+        margin-top: 40px;
+    }
     
+    .wrapper .btn {
+        font-size: 25px;
+        background-image: linear-gradient(to top, rgba(0, 0, 0, 0.897), rgb(93, 27, 199));
+        color: white;
+        height: 80px;
+    }
+
+    .input-box input::placeholder {
+        font-size: 25px;
+    }
 }
-    */
