--- a/html-css/exercicios/modern-login/style.css
+++ b/html-css/exercicios/modern-login/style.css
@@ -121,6 +121,7 @@ body {
     text-decoration: underline;
 }
 
+/*
 @media screen and (orientation: portrait) {
 
     .wrapper h1 {
@@ -130,7 +131,7 @@ body {
     
     .wrapper { 
         width: 450px;
-        height: 75vh;
+        height: 72vh;
     }
 
     .wrapper .remember-forgot { margin: 100px -20px 12vh; }
@@ -156,3 +157,4 @@ body {
         font-size: 25px;
     }
 }
+    */
