--- a/javascript/exercicio_01/style.css
+++ b/javascript/exercicio_01/style.css
@@ -3,6 +3,7 @@
 body {
     background: rgb(70, 142, 236);
     font-family: Arial, Helvetica, sans-serif;
+    min-height: 100vh;
 }
 
 header {
@@ -32,4 +33,9 @@ div {
 
 #imagem {
     width: 210px;
+}
+
+#msg>p {
+    color: rgb(0, 0, 0);
+    font-size: larger;
 }
