--- a/javascript/exercicio_02/style.css
+++ b/javascript/exercicio_02/style.css
@@ -12,18 +12,14 @@ section {
     width: 400px;
     height: 420px;
     border-radius: 10px;
-    margin: auto;
+    margin: auto; /*Centraliza a section*/
     box-shadow: 3px 3px 10px rgb(0, 0, 0);
 }
 
 
 header {
     color: white;
-    text-align: center;
-}
-
-footer {
-    text-align: center;
+    text-align: center; /* centraliza o text */
 }
 
 footer {
@@ -36,7 +32,7 @@ footer {
 img {
     width: 100%;
     max-width: 250px;
-    aspect-ratio: 1/1;
+    aspect-ratio: 1/1;   /* deixa a imagem circular*/
     object-fit: cover;
     border-radius: 50%;
     padding: 20px;
@@ -47,9 +43,6 @@ img {
     border: none;
     color: white;
     padding: 3px 8px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
     font-size: 16px;
     margin: 4px 2px;
     cursor: pointer;
