--- a/javascript/exercicio_03/style.css
+++ b/javascript/exercicio_03/style.css
@@ -35,6 +35,6 @@ footer {
 }
 
 #botaozinho:hover {
-    background-color: rgb(26, 214, 214);
+    background-color: rgba(128, 0, 128, 0.247);
     transform: scale(1.05);
 }
